--- a/lesson 2/registration.html
+++ b/lesson 2/registration.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <link rel="stylesheet" href="./css/reset200802.css">
+    <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -15,7 +17,11 @@
         <input class="field" type="password" name="password" placeholder="Password">
         <input class="field" type="password" name="password" placeholder="Confirm Password">
         <button class="button">Register</button>
-        <h2 class="register">Or register with</h2>
+        <div class="register">
+            <div class="line"></div>
+            <h2>Or register with</h2>
+            <div class="line"></div>
+            </div>
         <button type="button" class="social-button"><img src="img/google.svg" alt="google"> Continue with Google</button>
         <button type="button" class="social-button"><img src="img/facebook.svg" alt="facebook">Continue with Facebook</button>
     </form>
