moved files to root from lesson 2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
-    <link rel="stylesheet" href="csseset200802.css">
-    <link rel="stylesheet" href="cssormalize.css">
-    <link rel="stylesheet" href="csstyle.css">
+    <link rel="stylesheet" href="./css/reset200802.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="register-block">
