moved files to root from lesson 1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <p>I really love to read. Here is a selection of my favorite books.</p>
     <section>
         <img src="images/index/image-4.jpg" alt="Веріті" width="400">
-        <img src="./images/index/image-5.jpg" alt="Там, де співають раки" width="400">
+        <img src="images/index/image-5.jpg" alt="Там, де співають раки" width="400">
     </section>
     <section>
         <h2>Goal</h2>
